fix css styles crashed on safari

--- a/components/MiniProductBox/miniProductBox.module.scss
+++ b/components/MiniProductBox/miniProductBox.module.scss
@@ -28,15 +28,15 @@
     .newBadge {
       background-color: var(--main-color);
       padding: 2px 8px;
-      -webkit-padding: 2px 8px;
+      -webkit-padding: 2px 8px !important;
       color: #fff;
       margin-bottom: 3px;
       span {
         font-size: 0.8rem;
-        -webkit-font-size: 0.8rem;
+        -webkit-font-size: 0.8rem !important;;
         i {
           font-size: 1rem;
-          -webkit-font-size: 1rem;
+          -webkit-font-size: 1rem !important;
         }
       }
       &.rounded {
@@ -176,7 +176,7 @@
       display: flex;
       align-items: center;
       gap: 5px;
-      -webkit-gap: 5px;
+      -webkit-gap: 5px !important;
     }
 
     i {
