--- a/components/Navbar/navbarTwo.module.scss
+++ b/components/Navbar/navbarTwo.module.scss
@@ -12,8 +12,9 @@
       cursor: pointer;
       .bigImage {
         height: 75px;
+        -webkit-height: 75px !important;
         object-fit: contain;
-        -webkit-object-fit: contain;
+        -webkit-object-fit: contain !important;
         @include md {
           display: none;
         }
@@ -82,8 +83,9 @@
         display: none;
         .smallImage {
           height: 50px;
+          -webkit-height: 50px !important;
           object-fit: contain;
-          -webkit-object-fit: contain;
+          -webkit-object-fit: contain !important;
           @include md {
             display: inline-block;
           }
